--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-01.Rmd
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-01.Rmd
@@ -1871,9 +1871,9 @@ list_dat_out <- list()
 ```{r}
 rhs <- "cigarette_counts"
 lhs <- "Y"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -1881,7 +1881,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -1898,9 +1898,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -1909,9 +1906,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "wearing_patch"
 lhs <- "Y"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -1919,7 +1916,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -1936,9 +1933,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -1947,9 +1941,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_availability"
 lhs <- "Y"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -1957,7 +1951,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -1974,135 +1968,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-dat_all_out_same_ema <- bind_rows(list_dat_out)
-
-dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
-```
-
-## Dependent variable: cigarette_counts
-
-```{r}
-list_dat_out <- list()
-```
-
-```{r}
-rhs <- "Y"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-rhs <- "wearing_patch"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-rhs <- "cigarette_availability"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2123,9 +1988,9 @@ list_dat_out <- list()
 ```{r}
 rhs <- "Y"
 lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2133,7 +1998,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2150,9 +2015,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2161,9 +2023,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_counts"
 lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2171,7 +2033,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2188,9 +2050,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2199,9 +2058,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_availability"
 lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2209,7 +2068,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2226,10 +2085,130 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+dat_all_out_same_ema <- bind_rows(list_dat_out)
+
+dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
+```
+
+## Dependent variable: cigarette_counts
+
+```{r}
+list_dat_out <- list()
+```
+
+```{r}
+rhs <- "Y"
+lhs <- "cigarette_counts"
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = gaussian)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+rhs <- "wearing_patch"
+lhs <- "cigarette_counts"
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = gaussian)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+rhs <- "cigarette_availability"
+lhs <- "cigarette_counts"
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = gaussian)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2249,9 +2228,9 @@ list_dat_out <- list()
 ```{r}
 rhs <- "Y"
 lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2265,9 +2244,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -2276,10 +2256,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2287,9 +2265,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_counts"
 lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2303,9 +2281,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -2314,10 +2293,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2325,9 +2302,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "wearing_patch"
 lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2341,9 +2318,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -2352,10 +2330,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2365,10 +2341,6 @@ dat_all_out_same_ema <- bind_rows(list_dat_out)
 
 dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
 ```
-
-
-
-
 
 
 
