--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-02.Rmd
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-02.Rmd
@@ -277,7 +277,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "pp1_1"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -288,7 +288,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -319,7 +319,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "FinancialStrain"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -330,7 +330,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -362,7 +362,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "nd_mean"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -373,7 +373,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2071,6 +2071,7 @@ dat_all_out_quadratic <- bind_rows(list_dat_out_quadratic)
 dat_all_out_quadratic %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
 ```
 
+
 # Predictors measured in the same EMA
 
 ```{r}
@@ -2083,6 +2084,7 @@ dat_included <- dat_primary_aim %>%
   filter(eligibility_lag1 == 0)
 ```
 
+
 ## Dependent variable: Y
 
 ```{r}
@@ -2092,9 +2094,9 @@ list_dat_out <- list()
 ```{r}
 rhs <- "cigarette_counts"
 lhs <- "Y"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2102,7 +2104,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2119,9 +2121,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2130,9 +2129,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "wearing_patch"
 lhs <- "Y"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2140,7 +2139,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2157,9 +2156,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2168,9 +2164,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_availability"
 lhs <- "Y"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2178,7 +2174,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2195,135 +2191,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-dat_all_out_same_ema <- bind_rows(list_dat_out)
-
-dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
-```
-
-## Dependent variable: cigarette_counts
-
-```{r}
-list_dat_out <- list()
-```
-
-```{r}
-rhs <- "Y"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-rhs <- "wearing_patch"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-rhs <- "cigarette_availability"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2344,9 +2211,9 @@ list_dat_out <- list()
 ```{r}
 rhs <- "Y"
 lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2354,7 +2221,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2371,9 +2238,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2382,9 +2246,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_counts"
 lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2392,7 +2256,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2409,9 +2273,6 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
@@ -2420,9 +2281,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_availability"
 lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2430,7 +2291,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -2447,10 +2308,130 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
                       auc = area_under_roc_curve)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+dat_all_out_same_ema <- bind_rows(list_dat_out)
+
+dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
+```
+
+## Dependent variable: cigarette_counts
+
+```{r}
+list_dat_out <- list()
+```
+
+```{r}
+rhs <- "Y"
+lhs <- "cigarette_counts"
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = gaussian)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+rhs <- "wearing_patch"
+lhs <- "cigarette_counts"
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = gaussian)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+rhs <- "cigarette_availability"
+lhs <- "cigarette_counts"
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = gaussian)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2470,9 +2451,9 @@ list_dat_out <- list()
 ```{r}
 rhs <- "Y"
 lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2486,9 +2467,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -2497,10 +2479,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2508,9 +2488,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "cigarette_counts"
 lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2524,9 +2504,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -2535,10 +2516,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2546,9 +2525,9 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 ```{r}
 rhs <- "wearing_patch"
 lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+my_formula <- formula(paste(lhs, " ~ ", rhs, sep = ""))
 
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
 rows_no_miss <- dat_for_analysis %>% complete.cases(.)
 dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
 
@@ -2562,9 +2541,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -2573,10 +2553,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta1 = dat_fit_summary[["Estimate"]][2],
                       conf_int_lb_beta1 = conf_int_lb[2],
                       conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -2587,129 +2565,5 @@ dat_all_out_same_ema <- bind_rows(list_dat_out)
 dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
 ```
 
-# What would make good predictors for time-varying variables is the same EMA as Y?
 
-## Wearing patch
-
-```{r}
-list_dat_out <- list()
-```
-
-```{r}
-rhs <- "days_between_v1_and_coinflip_local"
-lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      auc = area_under_roc_curve)
-
-dat_out %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
-```
-
-
-## Cigarette availability
-
-```{r}
-list_dat_out <- list()
-```
-
-```{r}
-rhs <- "days_between_v1_and_coinflip_local"
-lhs <- "cigarette_availability"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      auc = area_under_roc_curve)
-
-dat_out %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
-```
-
-## Cigarette counts
-
-```{r}
-list_dat_out <- list()
-```
-
-```{r}
-rhs <- "days_between_v1_and_coinflip_local"
-lhs <- "cigarette_counts"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      auc = area_under_roc_curve)
-
-dat_out %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
-```
 
