--- a/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-03.Rmd
+++ b/analysis-multiple-imputation/diagnostics/explore-predictors-stratum-03.Rmd
@@ -289,7 +289,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "pp1_1"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -300,7 +300,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -331,7 +331,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "FinancialStrain"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -342,7 +342,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -374,7 +374,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "nd_mean"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -385,7 +385,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -459,7 +459,7 @@ list_dat_out <- append(list_dat_out, list(dat_out))
 
 ```{r}
 rhs <- "has_partner"
-lhs <- "income_val"
+lhs <- "Y"
 my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), rhs, sep = "+"))
 
 dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", lhs, rhs)))
@@ -470,7 +470,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -3324,7 +3324,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -3362,7 +3362,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -3418,9 +3418,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3431,8 +3432,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3456,9 +3458,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3469,8 +3472,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3507,9 +3511,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3520,8 +3525,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3545,9 +3551,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3558,8 +3565,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3583,9 +3591,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3596,8 +3605,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3621,9 +3631,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3634,8 +3645,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3659,9 +3671,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3672,8 +3685,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3697,9 +3711,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3710,8 +3725,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3735,9 +3751,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3748,8 +3765,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3773,9 +3791,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3786,8 +3805,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3811,9 +3831,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3824,8 +3845,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3849,9 +3871,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -3862,8 +3885,9 @@ dat_out <- data.frame(predictor = rhs,
                       conf_int_ub_beta1 = conf_int_ub[2],
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      conf_int_ub_beta2 = conf_int_ub[3],                      
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -3885,6 +3909,7 @@ dat_included <- dat_primary_aim %>%
   filter(eligibility_lag1 == 1)
 ```
 
+
 ## Dependent variable: Y
 
 ```{r}
@@ -3904,7 +3929,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -3942,7 +3967,7 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -3980,7 +4005,133 @@ fit <- geeglm(my_formula,
               data = dat_for_analysis_cc, 
               id = participant_id,
               waves = decision_point,
-              family = gaussian)
+              family = binomial)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_probabilities <- c(fit$fitted.values)
+roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
+area_under_roc_curve <- as.numeric(roc_obj$auc)
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      est_beta2 = dat_fit_summary[["Estimate"]][3],
+                      conf_int_lb_beta2 = conf_int_lb[3],
+                      conf_int_ub_beta2 = conf_int_ub[3],
+                      auc = area_under_roc_curve)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+dat_all_out_same_ema <- bind_rows(list_dat_out)
+
+dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
+```
+
+## Dependent variable: wearing_patch
+
+```{r}
+list_dat_out <- list()
+```
+
+```{r}
+rhs <- "Y"
+lhs <- "wearing_patch"
+my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = binomial)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_probabilities <- c(fit$fitted.values)
+roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
+area_under_roc_curve <- as.numeric(roc_obj$auc)
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      est_beta2 = dat_fit_summary[["Estimate"]][3],
+                      conf_int_lb_beta2 = conf_int_lb[3],
+                      conf_int_ub_beta2 = conf_int_ub[3],
+                      auc = area_under_roc_curve)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+rhs <- "cigarette_counts"
+lhs <- "wearing_patch"
+my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = binomial)
+dat_fit_summary <- summary(fit)[["coefficients"]]
+
+conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
+
+fitted_probabilities <- c(fit$fitted.values)
+roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
+area_under_roc_curve <- as.numeric(roc_obj$auc)
+
+dat_out <- data.frame(predictor = rhs,
+                      est_beta0 = dat_fit_summary[["Estimate"]][1],
+                      conf_int_lb_beta0 = conf_int_lb[1],
+                      conf_int_ub_beta0 = conf_int_ub[1],
+                      est_beta1 = dat_fit_summary[["Estimate"]][2],
+                      conf_int_lb_beta1 = conf_int_lb[2],
+                      conf_int_ub_beta1 = conf_int_ub[2],
+                      est_beta2 = dat_fit_summary[["Estimate"]][3],
+                      conf_int_lb_beta2 = conf_int_lb[3],
+                      conf_int_ub_beta2 = conf_int_ub[3],
+                      auc = area_under_roc_curve)
+
+list_dat_out <- append(list_dat_out, list(dat_out))
+```
+
+```{r}
+rhs <- "cigarette_availability"
+lhs <- "wearing_patch"
+my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
+
+dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
+rows_no_miss <- dat_for_analysis %>% complete.cases(.)
+dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
+
+fit <- geeglm(my_formula, 
+              data = dat_for_analysis_cc, 
+              id = participant_id,
+              waves = decision_point,
+              family = binomial)
 dat_fit_summary <- summary(fit)[["coefficients"]]
 
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
@@ -4036,9 +4187,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -4050,7 +4202,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
                       conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -4074,9 +4227,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -4088,7 +4242,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
                       conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -4112,9 +4267,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -4126,133 +4282,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
                       conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-dat_all_out_same_ema <- bind_rows(list_dat_out)
-
-dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
-```
-
-## Dependent variable: wearing_patch
-
-```{r}
-list_dat_out <- list()
-```
-
-```{r}
-rhs <- "Y"
-lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-rhs <- "cigarette_counts"
-lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
-
-list_dat_out <- append(list_dat_out, list(dat_out))
-```
-
-```{r}
-rhs <- "cigarette_availability"
-lhs <- "wearing_patch"
-my_formula <- formula(paste(paste(lhs, "~ 1", sep=""), "days_between_v1_and_coinflip_local", rhs, sep = "+"))
-
-dat_for_analysis <- dat_included %>% select(all_of(c("participant_id", "decision_point", "days_between_v1_and_coinflip_local", lhs, rhs)))
-rows_no_miss <- dat_for_analysis %>% complete.cases(.)
-dat_for_analysis_cc <- dat_for_analysis %>% filter(rows_no_miss)
-
-fit <- geeglm(my_formula, 
-              data = dat_for_analysis_cc, 
-              id = participant_id,
-              waves = decision_point,
-              family = gaussian)
-dat_fit_summary <- summary(fit)[["coefficients"]]
-
-conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
-
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
-
-dat_out <- data.frame(predictor = rhs,
-                      est_beta0 = dat_fit_summary[["Estimate"]][1],
-                      conf_int_lb_beta0 = conf_int_lb[1],
-                      conf_int_ub_beta0 = conf_int_ub[1],
-                      est_beta1 = dat_fit_summary[["Estimate"]][2],
-                      conf_int_lb_beta1 = conf_int_lb[2],
-                      conf_int_ub_beta1 = conf_int_ub[2],
-                      est_beta2 = dat_fit_summary[["Estimate"]][3],
-                      conf_int_lb_beta2 = conf_int_lb[3],
-                      conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -4288,9 +4319,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -4302,7 +4334,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
                       conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -4326,9 +4359,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -4340,7 +4374,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
                       conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -4364,9 +4399,10 @@ dat_fit_summary <- summary(fit)[["coefficients"]]
 conf_int_lb <- dat_fit_summary[["Estimate"]] - qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 conf_int_ub <- dat_fit_summary[["Estimate"]] + qnorm(1 - type_one_error_rate/2) * dat_fit_summary[["Std.err"]]
 
-fitted_probabilities <- c(fit$fitted.values)
-roc_obj <- roc(dat_for_analysis_cc[[lhs]], fitted_probabilities)
-area_under_roc_curve <- as.numeric(roc_obj$auc)
+fitted_vals <- c(fit$fitted.values)
+mse <- sum((dat_for_analysis_cc[[lhs]] - fitted_vals)^2)/length(fitted_vals)
+rmse <- sqrt(mse)
+std_dev <- sd(dat_for_analysis_cc[[lhs]])
 
 dat_out <- data.frame(predictor = rhs,
                       est_beta0 = dat_fit_summary[["Estimate"]][1],
@@ -4378,7 +4414,8 @@ dat_out <- data.frame(predictor = rhs,
                       est_beta2 = dat_fit_summary[["Estimate"]][3],
                       conf_int_lb_beta2 = conf_int_lb[3],
                       conf_int_ub_beta2 = conf_int_ub[3],
-                      auc = area_under_roc_curve)
+                      root_mean_squared_error = rmse,
+                      one_std_dev = 1*std_dev)
 
 list_dat_out <- append(list_dat_out, list(dat_out))
 ```
@@ -4388,5 +4425,6 @@ dat_all_out_same_ema <- bind_rows(list_dat_out)
 
 dat_all_out_same_ema %>% mutate(across(-any_of("predictor"), ~round(.x, 3)))
 ```
+
 
 
